setup the flasgger

--- a/api/v1/views/documentation/admin/post_admin.yml
+++ b/api/v1/views/documentation/admin/post_admin.yml
@@ -1,7 +1,7 @@
     posts a new admin
     ---
     tags:
-      - Admins
+      - Admin
     parameters:
       - name: admin_and_password
         in: body
