--- a/api/v1/views/documentation/admin/put_admin.yml
+++ b/api/v1/views/documentation/admin/put_admin.yml
@@ -1,7 +1,7 @@
     updates admin information
     ---
     tags:
-      - Admins
+      - Admin
     parameters:
       - name: admin_id
         in: path
