--- a/api/v1/views/documentation/school/delete_school.yml
+++ b/api/v1/views/documentation/school/delete_school.yml
@@ -1,7 +1,7 @@
     Deletes a school based on the id provided
     ---
     tags:
-      - Places
+      - School
     parameters:
       - name: school_id
         in: path
