--- a/api/v1/views/documentation/teacher/put_teacher.yml
+++ b/api/v1/views/documentation/teacher/put_teacher.yml
@@ -1,7 +1,7 @@
     Updates the teacher info based on ID
     ---
     tags:
-      - Teachers
+      - Teacher
     parameters:
       - name: teacher_id
         in: path
