--- a/api/v1/views/documentation/school/all_schools.yml
+++ b/api/v1/views/documentation/school/all_schools.yml
@@ -1,7 +1,32 @@
 retrieves a list of all schools.
 ---
-- name: Retrieve all schools
-  uri:
-    url: "http://localhost:PORT/schools"
-    method: GET
-  register: schools
+tags:
+  - School
+
+responses:
+  200:
+    description: request executed successfully
+    schema:
+      type: array
+      items:
+        properties:
+          __class__:
+            type: string
+          created_at:
+            type: string
+            description: time of creation of the instance
+          updated_at:
+            type: string
+            description: time of last update of the instance
+          id:
+            type: string
+            description: The uuid of the instance
+          email:
+            type: string
+            description: admin's email
+          password:
+            type: string
+            description: admin's password
+          school_name:
+            type: string
+            description: admin's school name
