--- a/api/v1/views/documentation/sclass/get_sclass.yml
+++ b/api/v1/views/documentation/sclass/get_sclass.yml
@@ -1,25 +1,31 @@
-Gets the list of all sclasss
+retrieve sclass with id
 ---
 tags:
-  - SClasss
+  - SClass
+parameters:
+  - name: sclass_id
+    in: path
+    type: string
+    required: true
+    description: the unique id of the class
 responses:
+  404:
+    description: SClass not found
   200:
     description: Successful request
     schema:
-      type: array
-      items:
-        properties:
-          __class__:
-            type: string
-          created_at:
-            type: string
-            description: time of creation of the instance
-          updated_at:
-            type: string
-            description: time of last update of the instance
-          id:
-            type: string
-            description: The uuid of the sclass instance
-          name:
-            type: string
-            description: SClass name
+      properties:
+        __class__:
+          type: string
+        created_at:
+          type: string
+          description: time of creation of the instance
+        updated_at:
+          type: string
+          description: time of last update of the instance
+        id:
+          type: string
+          description: The uuid of the class instance
+        name:
+          type: string
+          description: SClass name
