--- a/api/v1/views/documentation/student/all_students.yml
+++ b/api/v1/views/documentation/student/all_students.yml
@@ -1,7 +1,7 @@
 get a list of students based on the sclass_id
 ---
 tags:
-  - students
+  - student
 parameters:
   - name: sclass_id
     in: path
