--- a/api/v1/views/documentation/student/delete_student.yml
+++ b/api/v1/views/documentation/student/delete_student.yml
@@ -1,7 +1,7 @@
     deletes a student based on id
     ---
     tags:
-      - students
+      - student
     parameters:
       - name: student_id
         in: path
