--- a/api/v1/views/documentation/teacher/delete_teacher.yml
+++ b/api/v1/views/documentation/teacher/delete_teacher.yml
@@ -1,7 +1,7 @@
     Deletes a teacher based on the id provided
     ---
     tags:
-      - Teachers
+      - Teacher
     parameters:
       - name: teacher_id
         in: path
