--- a/api/v1/views/documentation/teacher/post_teacher.yml
+++ b/api/v1/views/documentation/teacher/post_teacher.yml
@@ -1,7 +1,7 @@
     Posts a new teacher
     ---
     tags:
-      - Teachers
+      - Teacher
     parameters:
       - name: teacher_id
         in: path
